--- a/todo
+++ b/todo
@@ -1,61 +1,82 @@
-
-
 <DOCTYPE html>
 <html>
 <head><title> page title</title>
 <style>
 .mDiv {
- width:100%
- 
- padding:20;
+ width:100%;
+ height:800px;
+
 }
+.headD{
+width:90%;
+padding-left: 5%;
+padding-right: 5%;
+padding-top: 20px;
+padding-bottom: 20px;
+height:80px;
+text-align: justify;
+}
+
 .myDiv {
- width:45%;
- float:left;
- padding:5px;
+ width:50%;
+ padding-left: 3%;
+ padding-right: 3%;
+ padding-top: 20px;
+ padding-bottom: 20px;
+
 }
-</head>
-.newDiv{
+
+.BDiv{
 width:45%;
-Float:right;
-padding:5px:
-}
-.udiv{
-width:50%;
+height:150px;
+padding:2px;
 float:left;
-padding:10px;
+
+text-align: justify;
+}
+.LDiv{
+width:45%;
+float:left;
+padding:2px;
+
+text-align: justify
 }
 </style>
+
+</head>
 <body>
-<div class="mydiv>
-<p>This guide is beginner friendly, as the examples will be very easy to understand. It will also be a generalized tutorial so anyone can follow along no matter what your favorite programming language is. </p><br>
-<p>Git is a version control system which lets you track changes you make to your files over time. With Git, you can revert to various states of your files (like a time traveling machine). You can also make a copy of your file, make changes to that copy, and then merge these changes to the original copy.</p></div>
-<p>
-<div class="udiv">
-<ul>
-<li>A command line interface.</li>
-<li>A text editor of your choice (I will be using VS Code).</li>
-<li>A GitHub account.</li>
-<li>A command line interface.</li>
-<li>A text editor of your choice (I will be using VS Code).</li>
-<li>A GitHub account.</li>
-<li>A command line interface.</li>
-<li>A text editor of your choice (I will be using VS Code).</li>
-<li>A GitHub account.</li>
-</p>
-<div class="myDiv">
-<p >In order to use Git, you have to install it on your computer. To do this, you can download the latest version on the official website. You can download for your operating system from the options given.
+<div class="mDiv">
+    <div class="headD">
+        <p>Plant care isn’t always the easiest when you’re unsure of where to start. Once you learn plant care basics and find a routine, you’ll notice all the wonderful benefits of being a plant parent. Research has shown that plants can help you breathe happier and boost your mood just by having them around. Whether you’re decking out your room or office with houseplants, we’ve highlighted some top plant care tips to assist you in taking care of your new plant babies. Following these plant care instructions will come to you as second nature very soon! </p>
+    </div>
+    <div class="myDiv"">
+        <ul>
+    <li>Feel the Soil to Know How Often to Water Your Plants</li>
+    <li>It’s Better to Underwater Your Plants Than Overwater Them</li>
+    <li>Skip Fertilization for Houseplants if You’re Unsure</li>
+    <li>Houseplants Love Stability </li>
+    <li>Smaller Plants Are the Fastest Growing Plants</li>
+    <li>Place Low Light Plants in Bathrooms</li>
+    <li>Water Deeply, Rather Than Lightly and Frequently</li>
+    <li>Prune Your Plants</li>
+    <li>Try Out a DIY Self-Watering Planter </li>
+    <li>Don’t Repot Your Plants by Pulling Them!</li>
+    </ul>
+    </div>
+    <div class="BDiv">
+    <p>Warning: there’s a good chance this propagation tutorial opens the door to creating an entire propagation station in your home. Once you see how easy it is to create new plants from your existing plants, you might not be able to stop!
 
-You can also install Git using the command line, but since the commands vary with each operating system, we'll focus on the more general approach.
-How to configure Git
+There are quite a few ways to propagate houseplants, but in this article we’ll be focusing on the stem cutting method. Vining plants such as philodendrons, pothos, and monsteras work best with this method.</p>
+    </p>
+    </div>
+    <div class="LDiv">
+    <p>You aren’t the only one excited for warmer weather–have you noticed your plants shooting up new growth like wild now that the days are getting warmer and brighter?
 
-I will assume that at this point you have installed Git. To verify this, you can run this command on the command line: git --version. This shows you the current version installed on you PC. </p></div>
-<div class="newDiv">
-<p>In order to use Git, you have to install it on your computer. To do this, you can download the latest version on the official website. You can download for your operating system from the options given.
+During the winter months, growth generally slows for most houseplants. Spring and summer is when they awaken from their winter dormancy and use the seasons’ extra sunlight and humidity to get growing again!
 
-You can also install Git using the command line, but since the commands vary with each operating system, we'll focus on the more general approach.
-How to configure Git
-
-I will assume that at this point you have installed Git. To verify this, you can run this command on the command line: git --version. This shows you the current version installed on you PC.  </p>
+Do you know how to spot new growth? Often times new growth is confused with a dying leaf or a plant in distress, when actually the opposite is true! Can you spot the new growth in the photos below?</p>
+    </div>
+   
+</div>
 </body>
 </html>
